Fixed report button on mobile devices.

--- a/vcstranslator_project/static/sass/partials/_3.scss
+++ b/vcstranslator_project/static/sass/partials/_3.scss
@@ -66,5 +66,16 @@
         code {
             @include border-radius(0 0 15px 15px);
         }
+        
+        .feedback {
+            top: 10px;
+            
+            a {
+                padding: 0;
+                color: #eee;
+                color: rgba(255,255,255,0.9);
+                background: none;
+            }
+        }
     }
 }
