--- a/vcstranslator_project/static/sass/styles.scss
+++ b/vcstranslator_project/static/sass/styles.scss
@@ -202,7 +202,6 @@ body {
         right: 15px;
         top: 5px;
         width: 50px;
-        color: #444;
         text-align: center;
         @include small;
 
